improvement of new view compter

--- a/todo.txt
+++ b/todo.txt
@@ -57,10 +57,12 @@
         - galeries
     - Merger articles et galeries
 #    - Changer le gitignore pour accepter les jpeg de l'avatar par défaut et du dossier images d'exemple
-    - Changer le nom du module image du jour pour "à la une" et trouver une traduction
+    - Changer le nom du module image du jour pour "image à la une" et trouver une traduction (in the spotlight, in the news)
     - Autoriser la désactivation des modules
     - Choisir la taille des grands aperçus pour la lightbox
     - http://fr.flossmanuals.net/ecrire/phiroom/
+    - Voir pour passer la fonction "get_absolute_url" de Entry automatiquement avant le "save" et remplir un champ en base.
+    - ajouter un lien vers le fichier original dans les menus images de la bibliothèque
 
 
 ==== Les taches cron ====
