--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,14 @@
 ===== Liste des choses à faire dans  phiroom =====
 
 Petits bugs de la refactorisation :
-    - placeholder de la date de publication (weblog.forms)
+#    - placeholder de la date de publication (weblog.forms)
     - supprimer les mots-clés inutilisés du menu
+#    - changer le queryset dans weblog.models "save function"
+    - problème avec le renommage des dossiers dans librairy
+#    - problème avec la vignette des portfolios
+#    - problème avec les indications de portfolios et de posts sur les vignettes de la bibliothèque.
+#        - ajouter une fonction is_part_of_portfolio, et is_part_of_blogpost au modèle picture.
+    - faire une pagination de blog posts en blog posts
 
 ===== Avant release Béta =====
 #    - déplacer la SECRET_KEY dans devel_settings
