add choice for large previews size in conf

--- a/todo.txt
+++ b/todo.txt
@@ -79,7 +79,7 @@ Petits bugs de la refactorisation :
 #    - Changer le nom du module image du jour pour "image à la une" et trouver une traduction (in the spotlight, in the news)
 #   - supprimer les images du jour (remplacement par un blog post avec une seule image)
     - Autoriser la désactivation des modules
-    - Choisir la taille des grands aperçus pour la lightbox
+#    - Choisir la taille des grands aperçus pour la lightbox
     - http://fr.flossmanuals.net/ecrire/phiroom/ 
 #    - Voir pour passer la fonction "get_absolute_url" de Entry automatiquement avant le "save" et remplir un champ en base.
 #    - ajouter un lien vers le fichier original dans les menus images de la bibliothèque
