--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,19 @@ Petits bugs de la refactorisation :
 #    - refactoriser les feeds
     - mettre un maximum à la taille de l'avatar dans la vue qui suit la connexion
     - mettre un maximum au logo en haut à gauche des pages
-    - régler le problème des mails qui arrivent en delivery failure
+    - passer un get_object dans weblog.views.UpdateEntry
+#    - régler le problème des mails qui arrivent en delivery failure
+#    - changer les mail_managers() en mail_staff_members()
+    - créer un application « news_letter » qui :
+        - si l'utilisateur n'est pas connecté :
+            - envoit un form de demande d'email si l'utilisateur
+            - stocke l'email en base et envoit un mail de validation avec un lien unique
+            - stocke en base un lien unique de désinscription
+            - qd le lien est validé passe un boolean à true
+        - si l'utilisateur est connecté, stocke son mail en base sans validation
+        - à chaque publication envois un mail à tous les mails de la base
+        - à la réception d'un lien unique de désinscription supprime l'entrée
+    - passer les abonnements mails sans inscription (avec un lien envoyé par mail comme désinscription)
 
 ===== Avant release Béta =====
 #    - déplacer la SECRET_KEY dans devel_settings
@@ -168,6 +180,7 @@ Petits bugs de la refactorisation :
 	- tests du module weblog
     - tests du module portfolio
     - tests du module contact
+    - tests du module stats
 	- tests du module conf
 	- tests du module user
 #    - fixer le bug du choix de la page d'accueil
@@ -175,6 +188,7 @@ Petits bugs de la refactorisation :
 #	- passer le queryset conf ailleurs que dans une variable de classe (pour sa mise à jour)
 #	- trouver une solution pour les commentaires -> vieux module commentaire
 		- mettre en place le vieux module commentaire ou coder le mien
+            - https://github.com/django/django-contrib-comments
             -commentaire attachable à chaque objet (article, galerie, portfolios, images en particulier)
             - les commentaires de galeries articles portfolios et idj s'affichent avec une requête ajax sous l'article
             - les commentaires des images s'affichent sous l'image dans la lightbox avec une requête ajax
