--- a/todo.txt
+++ b/todo.txt
@@ -55,6 +55,7 @@ Petits bugs de la refactorisation :
     - voir pour l'enregistrement des entry (entrer l'ordre par nom ou autre dans la table through)
     - ajouter le domain entré dans la conf dans l'app site, et faire un clear du cache (pour éviter les feeds avec exemple.com)
 #    - get_related sur les nom d'auteur des articles
+    - voir quel est le problème avec feed.py et la création de la bdd de départ
 
 ===== Avant release Béta =====
 #    - déplacer la SECRET_KEY dans devel_settings
