--- a/memo/todo.txt
+++ b/memo/todo.txt
@@ -4,19 +4,21 @@ Todo list for phiroom
 =====================
 
 
-- tests for conf serializer and view
-- tests for user serializer and view
-- add a field with default for favicon in conf.models
+#- add a field with default for favicon in conf.models
+# -> cancelled: favicon will be phiroom one (for reclam)
+- serialize settings.LARGE_PREVIEWS_SIZE_CHOICES with conf serializer
 #- add a field for librairy logo
 #- rename logo field to weblog logo
 - add a field for portfolios logo
 
 
 
+=================================
+===          Tests            ===
+=================================
 
-
-
-
+- tests for conf serializer and view
+- tests for user serializer and view
 
 
 
