fix a bug in IsStaffOrReadOnly permission.

--- a/memo/todo.txt
+++ b/memo/todo.txt
@@ -18,6 +18,7 @@ Todo list for phiroom
 =================================
 
 - tests for conf serializer and view
+    -> bug with permissions (IsStaffOrReadOnly)
 - tests for user serializer and view
 
 
