--- a/memo/todo.txt
+++ b/memo/todo.txt
@@ -17,10 +17,10 @@ Todo list for phiroom
 ===          Tests            ===
 =================================
 
-- tests for conf serializer and view
-    -> bug with permissions (IsStaffOrReadOnly)
+#- tests for conf serializer and view
+#    -> bug with permissions (IsStaffOrReadOnly)
 - tests for user serializer and view
-
+- tests for weblog
 
 
 
