--- a/memo/todo.txt
+++ b/memo/todo.txt
@@ -20,7 +20,7 @@ Todo list for phiroom
 #- tests for conf serializer and view
 #    -> bug with permissions (IsStaffOrReadOnly)
 - tests for user serializer and view
-- tests for weblog
+#- tests for weblog
 
 
 
