--- a/memo/todo.txt
+++ b/memo/todo.txt
@@ -11,6 +11,9 @@ Todo list for phiroom
 #- rename logo field to weblog logo
 - add a field for portfolios logo
 - check why there are 16 query for serializing one blog post with no tags
+- add a DirectoryHeadSerializer serializer
+- add a directory_head_list view
+- user head in librairy side bar
 
 
 =================================
